--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-Flask==2.1.0
-flask-limiter==2.4.0
-psycopg2-binary==2.9.3
-cachetools==5.0.0
-openai==0.27.0
-reportlab==3.6.9
-fpdf==1.7.2
-aiohttp==3.8.1
+flask
+openai
+reportlab
+fpdf
+aiohttp
 PyGithub==1.55
-python-dotenv==0.19.2
-gunicorn==20.1.0
-werkzeug==2.0.3
+python-dotenv
+flask[async]
